src/test/deca/extension/syntax/invalid/array_declaration_withreserved.deca
// Dimension of an array can't be null

{
    int[null] a;
}